# itools

./: CMakeLists.txt  README.md
src/: devicemanager.cpp  devicemanager.h  mainwindow.cpp  mainwindow.h  sidebar.cpp  sidebar.h
